added logging of executions for better troubleshooting; compression level is now a config parameter

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -1,6 +1,12 @@
 [general]
 # whether debugging mode is on
 debug = true
+# the compression to use for zip
+# ZIP_STORED = 0
+# ZIP_DEFLATED = 8
+# ZIP_BZIP2 = 12
+# ZIP_LZMA = 14
+compression = 8
 
 [backend]
 # the URL of the UFDL backend
