removed trailing slash from URL

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -10,7 +10,7 @@ compression = 8
 
 [backend]
 # the URL of the UFDL backend
-url = http://127.0.0.1:8000/
+url = http://127.0.0.1:8000
 # the user to use for connecting to the backend
 user = admin
 # the password to use
