added polling type, use_sudo, ask_sudo_pw

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -7,6 +7,11 @@ debug = true
 # ZIP_BZIP2 = 12
 # ZIP_LZMA = 14
 compression = 8
+# how to obtain new jobs
+# supported:
+# - simple
+# - rabbitmq
+poll = simple
 
 [backend]
 # the URL of the UFDL backend
@@ -18,9 +23,19 @@ password = admin
 
 [docker]
 # the work directory for temporary files etc
-workdir = /home/fracpete/development/projects/waikato-ufdl/ufdl-job-launcher/test
+work_dir = /home/fracpete/development/projects/waikato-ufdl/ufdl-job-launcher/test
+# whether to use sudo (true|false)
+# for development use only!
+use_sudo = false
+# whether to ask for sudo password (true|false)
+# for development use only!
+ask_sudo_pw = false
 # whether docker runs as root (false) or the current user (true)
 use_current_user = false
+
+[poll]
+# interval in seconds for polling the backend
+interval = 5
 
 [rabbitmq]
 # the host running RabbitMQ
