renamed polling sections

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -33,11 +33,11 @@ ask_sudo_pw = false
 # whether docker runs as root (false) or the current user (true)
 use_current_user = false
 
-[poll]
+[simple_poll]
 # interval in seconds for polling the backend
 interval = 5
 
-[rabbitmq]
+[rabbitmq_poll]
 # the host running RabbitMQ
 host = 127.0.0.1
 # the port RabbitMQ listens on
