added support for cache_dir to keep pretrained models; added registering/registering of nodes; added hardware info entry point (output in json/yaml); added retrieval of IPv4 address

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -12,18 +12,24 @@ compression = 8
 # - simple
 # - rabbitmq
 poll = simple
+# the node ID
+# on GPU machines, corresponds to the GPU index
+# on CPU-only machines, just use 0
+node_id = 0
 
 [backend]
 # the URL of the UFDL backend
 url = http://127.0.0.1:8000
 # the user to use for connecting to the backend
-user = admin
+user = jobexec
 # the password to use
-password = admin
+password = jobexec
 
 [docker]
 # the work directory for temporary files etc
-work_dir = /home/fracpete/development/projects/waikato-ufdl/ufdl-job-launcher/test
+work_dir = /tmp/ufdl-job-launcher/workdir
+# the directory for caching downloaded base models etc
+cache_dir = /tmp/ufdl-job-launcher/cache
 # whether to use sudo (true|false)
 # for development use only!
 use_sudo = false
@@ -33,11 +39,11 @@ ask_sudo_pw = false
 # whether docker runs as root (false) or the current user (true)
 use_current_user = false
 
-[simple_poll]
+[poll_simple]
 # interval in seconds for polling the backend
 interval = 5
 
-[rabbitmq_poll]
+[poll_rabbitmq]
 # the host running RabbitMQ
 host = 127.0.0.1
 # the port RabbitMQ listens on
