renamed node_id to gpu_id

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -12,10 +12,10 @@ compression = 8
 # - simple
 # - rabbitmq
 poll = simple
-# the node ID
+# the GPU ID
 # on GPU machines, corresponds to the GPU index
 # on CPU-only machines, just use 0
-node_id = 0
+gpu_id = 0
 
 [backend]
 # the URL of the UFDL backend
