added 'poll_backenderror_wait' parameter to config file

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -12,6 +12,8 @@ compression = 8
 # - simple
 # - rabbitmq
 poll = simple
+# the time in seconds to wait before the next poll when encountering an error with the backend
+poll_backenderror_wait = 10
 # the GPU ID
 # on GPU machines, corresponds to the GPU index
 # on CPU-only machines, just use 0
