introduced sleep schedules to allow backing off, slowing doing polls etc

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -12,7 +12,8 @@ compression = 8
 # - simple
 poll = simple
 # the time in seconds to wait before the next poll when encountering an error with the backend
-poll_backenderror_wait = 10
+# (comma-separated list of int)
+poll_backenderror_wait = 10,30,60
 # the GPU ID
 # on GPU machines, corresponds to the GPU index
 # on CPU-only machines, just use 0
@@ -42,4 +43,5 @@ use_current_user = false
 
 [poll_simple]
 # interval in seconds for polling the backend
-interval = 5
+# (comma-separated list of int)
+interval = 5,10,30,60
