pip's caching is off by default

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -1,6 +1,8 @@
 [general]
 # whether debugging mode is on
 debug = true
+# whether to avoid pip from caching
+pip_no_cache = true
 # the compression to use for zip
 # ZIP_STORED = 0
 # ZIP_DEFLATED = 8
