--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -2,7 +2,7 @@
 # whether debugging mode is on
 debug = true
 # whether to avoid pip from caching
-pip_no_cache = true
+pip_no_cache = false
 # the compression to use for zip
 # ZIP_STORED = 0
 # ZIP_DEFLATED = 8
