use_current_user is now true by default

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -41,7 +41,7 @@ use_sudo = false
 # for development use only!
 ask_sudo_pw = false
 # whether docker runs as root (false) or the current user (true)
-use_current_user = false
+use_current_user = true
 
 [poll_simple]
 # interval in seconds for polling the backend
