added support for checking whether the job got cancelled

--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -20,6 +20,8 @@ poll_backenderror_wait = 10,30,60
 # on GPU machines, corresponds to the GPU index
 # on CPU-only machines, just use 0
 gpu_id = 0
+# the interval in seconds to wait at least between querying the backend whether a job has been cancelled
+cancel_check_wait = 10
 
 [backend]
 # the URL of the UFDL backend
