--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,11 +22,11 @@ RUN mkdir /ufdl && \
 # Install the Docker CLI
 RUN cd / && \
     apt-get update && \
-    apt-get install apt-transport-https ca-certificates curl gnupg lsb-release && \
+    apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release && \
     curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg && \
     echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
     apt-get update && \
-    apt-get install docker-ce-cli && \
+    apt-get install -y docker-ce-cli && \
     apt-get remove -y apt-transport-https ca-certificates curl gnupg lsb-release && \
     rm -f /usr/share/keyrings/docker-archive-keyring.gpg /etc/apt/sources.list.d/docker.list && \
     rm -rf /var/lib/apt/lists/*
