using admin/admin now

--- a/examples/job-launcher-docker.conf
+++ b/examples/job-launcher-docker.conf
@@ -27,9 +27,9 @@ cancel_check_wait = 10
 # the URL of the UFDL backend
 url = http://127.0.0.1:8000
 # the user to use for connecting to the backend
-user = jobexec
+user = admin
 # the password to use
-password = jobexec
+password = admin
 
 [docker]
 # the work directory for temporary files etc
