--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -27,9 +27,9 @@ cancel_check_wait = 10
 # the URL of the UFDL backend
 url = http://127.0.0.1:8000
 # the user to use for connecting to the backend
-user = jobexec
+user = admin
 # the password to use
-password = jobexec
+password = admin
 
 [docker]
 # the work directory for temporary files etc
@@ -48,4 +48,4 @@ use_current_user = true
 [poll_simple]
 # interval in seconds for polling the backend
 # (comma-separated list of int)
-interval = 5,10,30,60
+interval = 10,30
