--- a/examples/job-launcher-example.conf
+++ b/examples/job-launcher-example.conf
@@ -1,6 +1,8 @@
 [general]
 # whether debugging mode is on
 debug = true
+# whether to keep or delete the job dirs after a run
+keep_job_dirs = true
 # whether to avoid pip from caching
 pip_no_cache = false
 # the compression to use for zip
